--- a/index.html
+++ b/index.html
@@ -457,24 +457,21 @@
         <div class="birthday-image">🎈</div>
 
         <div class="letter-text">
-            <p>Gửi Nấm dethuongdethuong,</p>
+            <p>Gửi gái đẹp,</p>
 
             <p>Hôm nay là một ngày đặc biệt - sinh nhật của gái đẹp , tuyệt vời nhất trên đời! TuiTui muốn gửi đến bạn
-                những lời chúc tốt đẹp nhất từ trái tim mình.</p>
+                những lời chúc tốt đẹp nhất từ trái tim mình =)).</p>
 
-            <p>Cảm ơn bạn đã luôn là nguồn động viên và niềm vui trong cuộc sống của tôi. Nụ cười của bạn như ánh nắng
-                mặt trời, luôn làm sáng lên những ngày u ám. Tính cách dễ thương và tấm lòng nhân hậu của bạn đã làm cho
-                tôi trở thành một người tốt hơn.</p>
-
-            <p>Trong năm mới tuổi này, tôi chúc bạn:</p>
-            <p>🌟 Luôn tươi trẻ và xinh đẹp nènè<br>
-                🌟 Thành công trong công việc nènè<br>
-                🌟 Hạnh phúc và tiếng cười luôn nở trên môi<br>
+            <p>Tuổi mớiii, tui chúc gái đẹpđẹp:</p>
+            <p>🌟 Luôn tươi trẻ và xinh đẹp nè<br>
+                🌟 Nhẹ nhàng trong công việc nè<br>
+                🌟 Hạnh phúc và tiếng cười luôn nở trên môi nènè<br>
                 🌟 Được bao quanh bởi tình yêu thương của gia đình và bạn bè<br>
                 🌟 Tất cả những ước mơ đều trở thành hiện thực</p>
-            🌟 Đặc biệt là KHÔNG CÓ MÙ QUÁNG TRONG CHUYỆN TÌNH CẢMCẢM</p>
+            🌟 Chúc tất cả</p>
+            🌟 Đặc biệt P/S : là KHÔNG CÓ MÙ QUÁNG TRONG CHUYỆN TÌNH CẢM</p>
 
-            <p>Hãy tiếp tục tỏa sáng như chính mìnhmình nhé, Nấm ơi! 💖</p>
+            <p>Hãy tiếp tục tỏa sáng như chính mình nhé, Nấm ơi! 💖</p>
         </div>
 
         <div class="signature">
