--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
             margin-bottom: 10px;
         }
 
-        .birthday-image {
+        /* .birthday-image {
             width: 200px;
             height: 200px;
             border-radius: 50%;
@@ -458,7 +458,7 @@
             align-items: center;
             justify-content: center;
             font-size: 60px;
-        }
+        } */
 
         .letter-text {
             line-height: 1.8;
@@ -511,6 +511,20 @@
             .floating-sticker {
                 font-size: 20px;
             }
+        }
+
+        .imgAnh {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            margin: 0 auto 30px;
+            display: block;
+            border: 5px solid #87CEEB;
+            background: linear-gradient(45deg, #FFB6C1, #87CEEB);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 60px;
         }
     </style>
 </head>
@@ -578,8 +592,7 @@
         </div>
 
         <div class="birthday-image">
-            <img src="images/26.png" alt="Ảnh chúc mừng sinh nhật">
-
+            <img class="imgAnh" src="images/26.png" alt="Ảnh chúc mừng sinh nhật">
         </div>
 
         <div class="letter-text">
